--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server_upload_3",
   "version": "1.0.0",
-  "description": "",
+  "description": "Automated file uploads to server.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
