--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "Ben",
   "license": "MIT",
   "dependencies": {
-  "express": "^4.19.2",
-  "serve-index": "^1.9.1",
-  "datatables.net-dt": "^2.0.5",
-  "express-fileupload": "^1.4.3",
-  "form-data": "^4.0.0",
-  "formidable": "^3.5.1",
-  "moment": "^2.30.1",
-  "moment-timezone": "^0.5.45",
-  "node-fetch": "^2.7.0",
-  "pm2": "^5.3.1"
+    "datatables.net-dt": "^2.0.5",
+    "express": "^4.19.2",
+    "express-fileupload": "^1.4.3",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
+    "pm2": "^5.3.1",
+    "serve-index": "^1.9.1"
   }
 }
